--- a/_posts/2023-11-01-iro-tests.md
+++ b/_posts/2023-11-01-iro-tests.md
@@ -9,18 +9,45 @@ featured: true
 hidden: true
 ---
 
-This test consists of 2 parts: Nose work and obedience. See [IRO Tests](/iro-tests) for more information.
+IRO tests consist of 2 phases:
+
+1. Abt. A: Nose work
+2. Abt. B: Obedience and Dexterity
 
 ## Test types
 
-## Test Execution
+| Abbreviation | Description                 |
+|--------------|-----------------------------|
+| RH-F         | SAR Dog Test in Tracking    |
+| RH-FL        | SAR Dog Test in Area        |
+| RH-T         | SAR Dog Test in Rubble      |
+| RH-L         | SAR Dog Test in Avalanche   |
+| RH-W         | SAR Dog Test in Water       |
+| RH-MT        | SAR Dog Test in Mantrailing |
 
-### Nose work
+## Requirements for the Dog
 
-TODO
+| Test Level | Minimum Age |
+|------------|-------------|
+| Level V    | 15 months   |
+| Level A    | 18 months   |
+| Level B    | 20 months   |
 
-### Obedience & Dexterity
+## Testing prerequisites
 
-Exercises
+| Test Level          | Prerequisites                                                                       |
+|---------------------|-------------------------------------------------------------------------------------|
+| Level V             | None                                                                                |
+| Level A             | Level V in the same discipline                                                      |
+| Level B             | Minimum of 2 tests in Level A in the same discipline with<br> total good (G) rating |
+| Level B <br> (L, W) | 1 test in Level A with a minimum G rating                                           |
 
-TODO
+## Restrictions
+
+* A person may only enter one testing event on a given day
+* A person may participate a testing event with maximum 2 dogs.
+* A dog may only participate in 2 tests at a given event.
+
+{% include alert.html type="danger" content=
+"(Female) Dogs in heat are permitted at tests, however **must be kept away from the other participating dogs and will be shown at the end of each testing phase**."
+%}
