add exercise pages

--- a/_posts/2023-11-23-RH-FL-V.md
+++ b/_posts/2023-11-23-RH-FL-V.md
@@ -11,7 +11,6 @@ beforetoc: "This test consists of 2 parts: Nose work and obedience. See [IRO Tes
 toc: true
 ---
 
-
 ## Nose work
 
 TODO
@@ -22,14 +21,26 @@ Total 100 points.
 
 1. <a href="#on-leash-heeling">On-Leash Heeling (10 points)</a>
 2. <a href="#going-through-a-group-of-people">Going through a Group of People (10 points)</a>
-3. <a href="#">Down with Recall (10 points)</a>
-4. <a href="#">Change of Position (15 points)</a>
+3. <a href="#down-with-recall">Down with Recall (10 points)</a>
+4. <a href="#change-of-position">Change of Position (15 points)</a>
 5. <a href="#">Down under Distraction (10 points)</a>
-6. <a href="#">Carry and Handover (10 points)</a>
-7. <a href="#">Traversing unpleasant Material (15 points)</a>
-8. <a href="#">Tunnel with Tube (10 points)</a>
-9. <a href="#">Traversing an elevated rigid wooden Board (10 points)</a>
+6. <a href="#carry-and-hand-over">Carry and Handover (10 points)</a>
+7. <a href="#traversing-unpleasant-material">Traversing unpleasant Material (15 points)</a>
+8. <a href="#tunnel-with-tube">Tunnel with Tube (10 points)</a>
+9. <a href="#traversing-an-elevated-rigid-wooden-board">Traversing an elevated rigid wooden Board (10 points)</a>
 
 {% include exercise-v/on-leash-heeling.html %}
 
 {% include exercise-v/going-through-a-group-of-people.html %}
+
+{% include exercise-v/down-with-recall.html %}
+
+{% include exercise-v/change-of-position.html %}
+
+{% include exercise-v/carry-and-hand-over.html %}
+
+{% include exercise-v/traversing-unpleasant-material.html %}
+
+{% include exercise-v/tunnel-with-tube.html %}
+
+{% include exercise-v/traversing-an-elevated-rigid-wooden-board.html %}
